# dockcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
python/: MANIFEST.in  requirements.txt  setup.py
python/examples/: dist_to_coords_utils.py  dockt.py  vina.py
python/pydock/: __init__.py
src/: CMakeLists.txt  _build_config.py.in  bind.cpp  context.h  cuda_context.cpp  cuda_context.h  dock.cpp  dock.h  dtype.h  lbfgsb.cpp  make_install_pip_package.cmake  make_python_package.cmake  mempool.h  optimizer.h  utils.h
src/cu/: dock.cu  dockcu.h  svd3_cuda.h  utils.cu
src/culbfgsb/: active.cu  cauchy.cu  cmprlb.cu  culbfgsb.h  dpofa.cu  formk.cu  lbfgsbcpu.cpp  lbfgsbcuda.cpp  lbfgsbcuda.h  matupd.cu  subsm.cu
src/cuvina/: bfgs.cu  bfgsdef.h  conf.cu  conf_c.cuh  culog.h  cuvina.cpp  cuvina.h  dbg.cu  grid.cu  grid_c.cuh  model.cu  model_c.cuh  model_desc.cuh  model_desc.h  vinadef.h  vinasrv.cpp  vinasrv.h  vinautil.h
src/vina/: ad4cache.cpp  ad4cache.h  array3d.h  atom.h  atom_base.h  atom_constants.h  atom_type.h  bfgs.h  cache.cpp  cache.h  common.h  conf.h  conf_independent.h  coords.cpp  exec.cpp  grid.cpp  grid.h  grid_dim.h  incrementable.h  log.cpp  log.h  model.cpp  model.h  monte_carlo.cpp  monte_carlo.h  non_cache.cpp  non_cache.h  parallel.h  parallel_mc.cpp  parallel_mc.h  parallel_progress.h  parse_error.h  parse_pdbqt.cpp  potentials.h  precalculate.h  quasi_newton.cpp  quasi_newton.h  quaternion.cpp  scoring_function.h  szv_grid.h  (+4 more)
test/: CMakeLists.txt  dock_test.cpp  svd_test.cpp  vina_test.cpp
test/cases/: 0.h  1.h  10.h  11.h  12.h  13.h  14.h  15.h  16.h  17.h  18.h  19.h  2.h  20.h  21.h  3.h  4.h  5.h  6.h  7.h  8.h  9.h  cases.h  nn.py
